Some media have been added. The first variant has been deployed on production.

--- a/vlikin/simple_blogger_template-generated .html
+++ b/vlikin/simple_blogger_template-generated .html
@@ -1109,8 +1109,11 @@ vlikin
 </span>
 </span>
 <div class="clear"></div>
+
 </div>
-</div></div>
+</div>
+</div>
+<div id="footer">Made by Shell</div>
 <script type="text/javascript">
 if (window.jstiming) window.jstiming.load.tick('widgetJsBefore');
 </script><script type="text/javascript" src="./simple_blogger_template-generated _files/2768457969-widgets.js"></script>
@@ -1124,5 +1127,4 @@ _WidgetManager._RegisterWidget('_ProfileView', new _WidgetInfo('Profile1', 'blog
 _WidgetManager._RegisterWidget('_BlogArchiveView', new _WidgetInfo('BlogArchive1', 'blogger_engine-data_container', null, document.getElementById('BlogArchive1'), {'languageDirection': 'ltr'}, 'displayModeFull'));
 _WidgetManager._RegisterWidget('_PageListView', new _WidgetInfo('PageList1', 'null', null, document.getElementById('PageList1'), {'title': 'Страницы', 'links': [{'href': 'http://vlikin.blogspot.com/', 'title': 'Главная страница', 'isCurrentPage': true}], 'mobile': false}, 'displayModeFull'));
 </script>
-
 </body></html>
