the Image logic that is used to build the background has been modified.

--- a/vlikin/template.html
+++ b/vlikin/template.html
@@ -7,16 +7,24 @@
   		<![endif]-->
   		<link href="https://dl.dropboxusercontent.com/u/52187485/github/blogger_theme/vlikin/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" />
 		<b:skin><![CDATA[ ]]></b:skin>
-		<b:include data='blog' name='all-head-content'/>
+		<b:include data="blog" name="all-head-content"/>
 		<title>Title</title>
 	</head>
 	<body>
-		<b:section id='blogger_engine-data_container' preferred='yes'>
-			<b:widget id='Header1' locked='true' title='ddd' type='Header'/>
-			<b:widget id='Blog1' locked='true' title='' type='Blog'/>
-			<b:widget id='Profile1' locked='false' title='About Me' type='Profile'/>
-			<b:widget id='BlogArchive1' locked='false' title='Blog Archive' type='BlogArchive'/>
-		</b:section>
-		<div id="footer">Made by Shell</div>
+		<div id="body-top-bg">
+			<div id="body-bottom-bg">
+				<div id="page">
+					<div id="page-bottom-bg">
+						<b:section id="blogger_engine-data_container" preferred="yes">
+							<b:widget id="Header1" locked="true" title="" type="Header"/>
+							<b:widget id="Blog1" locked="true" title="" type="Blog"/>
+							<b:widget id="Profile1" locked="false" title="About Me" type="Profile"/>
+							<b:widget id="BlogArchive1" locked="false" title="Blog Archive" type="BlogArchive"/>
+						</b:section>
+						<div id="footer">Made by Shell</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
